tests/operator/add_num_nil.rev
3 + null // error: uninitialized variable